# django-webserver

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  setup.py
django_webserver/: __init__.py  base_command.py  utils.py
django_webserver/management/commands/: gunicorn.py  pyuwsgi.py  uvicorn.py  waitress.py
django_webserver/tests/: app.py  django_settings.py  tests.py
