[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
# version is pulled from django_webserver/__init__.py
dist-name = "django-webserver"
module = "django_webserver"
author = "Peter Baumgartner"
author-email = "pete@lincolnloop.com"
home-page = "https://github.com/lincolnloop/django-webserver"
description-file = "README.md"
keywords = "django webserver pyuwsgi uwsgi gunicorn waitress WSGI HTTP"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Framework :: Django",
]
requires = ["Django"]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "mock; python_version < '3.3'",
]
pyuwsgi = ["pyuwsgi"]
gunicorn = ["gunicorn"]
uvicorn = ["uvicorn; python_version >= '3.5'"]
waitress = ["waitress"]
